Ready for frontend development

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,8 @@
 RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
+RABBITMQ_HOST=
+RABBITMQ_PORT=5672
+REDIS_HOST=
+REDIS_PORT=6379
+UPLOAD_DESTINATION=/uploads 
+FILE_DURATION=
