Configured for deployment

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,9 @@
 RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
 RABBITMQ_HOST=
-RABBITMQ_PORT=5672
+RABBITMQ_PORT=
 REDIS_HOST=
-REDIS_PORT=6379
+REDIS_PORT=
 UPLOAD_DESTINATION=/uploads 
 FILE_DURATION=
+BACKEND_PORT=5000
