--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,30 +1,28 @@
 version: '3.8'
 
 services:
-    frontend:
+    proxy-server:
         build: 
             context: ./frontend
             dockerfile: Dockerfile
-            target: dev
-        volumes:
-            - './frontend:/code'
+            target: production
         ports:
-            - '3000:3000'
+            - '80:80'
         networks:
             - main-net
+        volumes:
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on: 
             - backend
+        restart: always
 
     backend:
         build: 
             context: ./backend
             dockerfile: Dockerfile
-            target: dev
+            target: production
         volumes:
-            - './backend:/code'
             - 'file-pool:/uploads'
-        ports:
-            - '5000:5000'
         env_file:
             - .env
         networks:
@@ -33,11 +31,11 @@ services:
         depends_on: 
             - cache
             - rabbitmq
+        restart: always
 
     worker:
         build: ./worker
         volumes:
-            - './worker:/code'
             - 'file-pool:/uploads'
         depends_on:
             - rabbitmq
@@ -50,13 +48,12 @@ services:
     rabbitmq:
         image: rabbitmq:3.9-management-alpine
         hostname: 'rabbit-hole'
-        ports:
-            - '15672:15672'
         env_file:
             - .env
         networks:
             - message_pipeline
-    
+        restart: always
+
     cache:
         image: 'redis:6.2.6-alpine'
         hostname: redis-cache
@@ -64,7 +61,7 @@ services:
             - message_pipeline
         volumes:
             - redis-data:/data
-
+        restart: always
 
 volumes:
     file-pool:
