Edited deploy action #2

--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -29,6 +29,7 @@ jobs:
         envkey_BACKEND_PORT: ${{ secrets.BACKEND_PORT }}
         envkey_UPLOAD_DESTINATION: ${{ secrets.UPLOAD_DESTINATION }}
         envkey_FILE_DURATION: ${{ secrets.FILE_DURATION }}
+        directory: .
         file_name: .env
 
     - name: Build the Docker Images
