--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -32,8 +32,11 @@ jobs:
         directory: .
         file_name: .env
 
+    - name: Swap docker-compose
+      run: rm docker-compose.yml && mv ./docker-compose.prod.yml ./docker-compose.yml
+
     - name: Build the Docker Images
-      run: docker-compose -f docker-compose.prod.yml build
+      run: docker-compose build
 
     - name: Zip for deploy
       uses: thedoctor0/zip-release@master
