--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     frontend:
         build: 
             context: ./frontend
-            dockerfile: Dockerfile
+            dockerfile: Dockerfile.dev
             target: dev
         volumes:
             - './frontend:/code'
@@ -18,7 +18,7 @@ services:
     backend:
         build: 
             context: ./backend
-            dockerfile: Dockerfile
+            dockerfile: Dockerfile.dev
             target: dev
         volumes:
             - './backend:/code'
