added file-server updated worker

--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -24,11 +24,14 @@ jobs:
         envkey_RABBITMQ_DEFAULT_PASS: ${{ secrets.RABBITMQ_DEFAULT_PASS }}
         envkey_RABBITMQ_HOST: ${{ secrets.RABBITMQ_HOST }}
         envkey_RABBITMQ_PORT: ${{ secrets.RABBITMQ_PORT }}
+        envkey_RABBITMQ_PROTOCOOL: ${{ secrets.RABBITMQ_PROTOCOOL }}
         envkey_REDIS_HOST: ${{ secrets.REDIS_HOST }}
         envkey_REDIS_PORT: ${{ secrets.REDIS_PORT }}
-        envkey_BACKEND_PORT: ${{ secrets.BACKEND_PORT }}
+        envkey_REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
+        # envkey_BACKEND_PORT: ${{ secrets.BACKEND_PORT }}
         envkey_UPLOAD_DESTINATION: ${{ secrets.UPLOAD_DESTINATION }}
         envkey_FILE_DURATION: ${{ secrets.FILE_DURATION }}
+        envkey_FILE_SERVER_API_KEY: ${{ secrets.FILE_SERVER_API_KEY }}
         directory: .
         file_name: .env
 
