--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,13 @@
+RABBITMQ_PROTOCOOL=
 RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
 RABBITMQ_HOST=
 RABBITMQ_PORT=
 REDIS_HOST=
 REDIS_PORT=
+REDIS_PASSWORD=
+BACKEND_PORT=5000
 UPLOAD_DESTINATION=/uploads 
 FILE_DURATION=
-BACKEND_PORT=5000
+NODE_ENV=
+API_KEY=
