--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         ports:
             - '5000:5000'
         env_file:
-            - .env
+            - .env.local
         networks:
             - message_pipeline
             - main-net
@@ -45,7 +45,18 @@ services:
         networks:
             - message_pipeline
         env_file:
-            - .env
+            - .env.local
+
+    file-server:
+        build: 
+            context: ./file-server
+            dockerfile: Dockerfile.dev
+            target: dev
+        volumes:
+            - './file-server:/code'
+            - 'file-pool:/uploads'
+        env_file:
+            - .env.local
 
     rabbitmq:
         image: rabbitmq:3.9-management-alpine
@@ -53,10 +64,10 @@ services:
         ports:
             - '15672:15672'
         env_file:
-            - .env
+            - .env.local
         networks:
             - message_pipeline
-    
+        restart: always    
     cache:
         image: 'redis:6.2.6-alpine'
         hostname: redis-cache
